--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.dll
 *.so
 *.dylib
+*.iml
 
 # Test binary, built with `go test -c`
 *.test
@@ -34,3 +35,4 @@ go.work.sum
 # Editor/IDE settings
 .vscode/
 .idea/
+
