--- a/configs/local.env
+++ b/configs/local.env
@@ -5,8 +5,7 @@ SERVER_PORT=8090
 LOG_LEVEL=INFO
 LOG_OUTPUT=STDOUT
 
-KAFKA_BROKER=localhost:9092
-
-WS_READ_BUFFER_SIZE=1024
-WS_WRITE_BUFFER_SIZE=1024
-WS_CHECK_ORIGIN=true
+# Redis
+REDIS_ADDR=localhost:6379
+REDIS_PASSWORD=
+REDIS_DB=0
