--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,41 +1,29 @@
 version: '3.8'
 
 services:
-  zookeeper:
-    image: confluentinc/cp-zookeeper:7.5.0
-    container_name: zookeeper
-    environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
-
-  kafka:
-    image: confluentinc/cp-kafka:7.5.0
-    container_name: kafka
+  redis:
+    image: redis:7-alpine
+    container_name: gochat-redis
     ports:
-      - "9092:9092"
-      - "9093:9093"
-    depends_on:
-      - zookeeper
-    environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
-      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
-      KAFKA_LISTENERS: INTERNAL://0.0.0.0:9010,INTERFACE://0.0.0.0:9093,NORMAL://0.0.0.0:9092,
-      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka:9010,INTERFACE://kafka:9093,NORMAL://localhost:9092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,INTERFACE:PLAINTEXT,NORMAL:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    command: redis-server --appendonly yes
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
-  kafka-ui:
-    image: provectuslabs/kafka-ui
-    container_name: kafka-ui
+  redis-commander:
+    image: rediscommander/redis-commander:latest
+    container_name: gochat-redis-ui
     depends_on:
-      - kafka
+      - redis
     ports:
-      - "9000:8080"
-    restart: always
+      - "8081:8081"
     environment:
-      - KAFKA_CLUSTERS_0_NAME=kafka
-      - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=kafka:9093
-      - KAFKA_CLUSTERS_0_ZOOKEEPER=zookeeper:2181
+      - REDIS_HOSTS=local:redis:6379
+
+volumes:
+  redis_data:
