Adding postgres to the project

--- a/configs/local.env
+++ b/configs/local.env
@@ -5,7 +5,15 @@ SERVER_PORT=8090
 LOG_LEVEL=INFO
 LOG_OUTPUT=STDOUT
 
+# PostgreSQL
+DATABASE_URL=postgres://gochat:gochat@localhost:5432/gochat?sslmode=disable
+
 # Redis
 REDIS_ADDR=localhost:6379
 REDIS_PASSWORD=
 REDIS_DB=0
+
+# JWT
+JWT_SECRET=local-dev-secret-key-change-in-production
+JWT_ACCESS_EXPIRY=15m
+JWT_REFRESH_EXPIRY=168h
