--- a/configs/local.env.example
+++ b/configs/local.env.example
@@ -13,7 +13,7 @@ REDIS_ADDR=localhost:6379
 REDIS_PASSWORD=
 REDIS_DB=0
 
-# JWT
-JWT_SECRET=local-dev-secret-key-change-in-production
+# JWT (CHANGE THIS IN PRODUCTION!)
+JWT_SECRET=your-secret-key-at-least-32-characters-long
 JWT_ACCESS_EXPIRY=15m
 JWT_REFRESH_EXPIRY=168h
