--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,11 @@ services:
     environment:
       - ENV=dev
       - SERVER_PORT=8080
-      - DATABASE_URL=postgres://gochat:gochat@postgres:5432/gochat?sslmode=disable
+      - DATABASE_URL=postgres://${POSTGRES_USER:-gochat}:${POSTGRES_PASSWORD:-gochat}@postgres:5432/${POSTGRES_DB:-gochat}?sslmode=disable
       - REDIS_ADDR=redis:6379
-      - REDIS_PASSWORD=
+      - REDIS_PASSWORD=${REDIS_PASSWORD:-}
       - REDIS_DB=0
-      - JWT_SECRET=your-super-secret-key-change-in-production
+      - JWT_SECRET=${JWT_SECRET:?JWT_SECRET is required}
     depends_on:
       postgres:
         condition: service_healthy
