--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 services:
-  app:
+  api:
     build:
-      context: .
+      context: ./backend
       dockerfile: Dockerfile
-    container_name: gochat-app
+    container_name: gochat-api
     ports:
       - "8080:8080"
     environment:
@@ -13,7 +13,7 @@ services:
       - REDIS_ADDR=redis:6379
       - REDIS_PASSWORD=${REDIS_PASSWORD:-}
       - REDIS_DB=0
-      - JWT_SECRET=${JWT_SECRET:?JWT_SECRET is required}
+      - JWT_SECRET=${JWT_SECRET:-dev_secret_change_me_in_production_k8s7x9m2}
     depends_on:
       postgres:
         condition: service_healthy
@@ -32,7 +32,7 @@ services:
       POSTGRES_DB: gochat
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./database/schema.sql:/docker-entrypoint-initdb.d/01-schema.sql:ro
+      - ./backend/database/schema.sql:/docker-entrypoint-initdb.d/01-schema.sql:ro
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U gochat -d gochat"]
       interval: 10s
