--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,29 @@
 services:
   # ========================
+  # Reverse Proxy (nginx)
+  # ========================
+  nginx:
+    image: nginx:alpine
+    container_name: gochat-nginx
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+      - web
+      - api
+    restart: unless-stopped
+
+  # ========================
   # Frontend
   # ========================
   web:
     build:
       context: ./frontend
       dockerfile: Dockerfile
-      args:
-        - NEXT_PUBLIC_API_URL=http://localhost:8080
-        - NEXT_PUBLIC_WS_URL=ws://localhost:8080
     container_name: gochat-web
-    ports:
-      - "3000:3000"
+    expose:
+      - "3000"
     depends_on:
       - api
     restart: unless-stopped
@@ -24,8 +36,8 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     container_name: gochat-api
-    ports:
-      - "8080:8080"
+    expose:
+      - "8080"
     environment:
       - ENV=dev
       - SERVER_PORT=8080
