--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -1,18 +1,10 @@
-upstream frontend {
-    server web:3000;
-}
-
-upstream backend {
-    server api:8080;
-}
-
 server {
-    listen 80;
-    server_name localhost;
+    listen 8080;
+    server_name _;
 
-    # Frontend
+    # Frontend (Next.js on port 3000)
     location / {
-        proxy_pass http://frontend;
+        proxy_pass http://127.0.0.1:3000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -23,9 +15,9 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
-    # API proxy
+    # API proxy (Go backend on port 8081)
     location /api/ {
-        proxy_pass http://backend;
+        proxy_pass http://127.0.0.1:8081;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -35,7 +27,7 @@ server {
 
     # WebSocket proxy
     location /ws {
-        proxy_pass http://backend;
+        proxy_pass http://127.0.0.1:8081;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -44,6 +36,14 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_read_timeout 86400;
+    }
+
+    # Metrics
+    location /metrics {
+        proxy_pass http://127.0.0.1:8081;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
     }
 }
 
