--- a/nginx-dev.conf
+++ b/nginx-dev.conf
@@ -1,9 +1,9 @@
 upstream frontend {
-    server host.docker.internal:3000;
+    server web:3000;
 }
 
 upstream backend {
-    server host.docker.internal:8080;
+    server api:8080;
 }
 
 server {
